# INF581_RL

./: Makefile  README.md  ddpg.py  experience.ipynb  main.py  old.ipynb  pyproject.toml  run.py  test.ipynb  train.py  train_dqn.py  util.py
src/carRacing/: utils.py
src/carRacing/envs/: __init__.py  abstract.py  default.py  dqn.py  ppo.py
src/carRacing/models/: __init__.py  abstract.py  cem.py  cem_base.py  ddpg.py  ddpg_base.py  dqn.py  ppo.py
trained_models/: cem.npy  dqn_1M_steps.pt  dqn_500_steps.pt
