[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "carRacing"
version = "0.0.1"
authors = [
  { name="Tutu", email="arturalves.ca@gmail.com"},
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'gymnasium[Box2D]',
    'torch',
    'opencv-python',
    'imageio',
    'stable-baselines3',
    'tqdm',
]
